--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Accounts/ApprovepayoutRequest.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Accounts/ApprovepayoutRequest.cshtml
@@ -4,100 +4,103 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-
-<div class="row">
-    <div class="col-sm-12">
-
-        <ol class="breadcrumb">
-            <li>
-                <i class="clip-home-3"></i>
-                <a href="#">
-                    Accounts
-                </a>
-            </li>
-            <li class="active">
-                Approve Payout Request
-            </li>
-
-        </ol>
-
-
-    </div>
-</div>
-<br />
+ 
 
 <span style="color: red">@TempData["Topup"] </span>
-<div class="row">
-    <div class="col-lg-12">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                Approve Payout Request
+<br />
+<div class="app-content content">
+    <div class="content-overlay"></div>
+    <div class="header-navbar-shadow"></div>
+    <div class="content-wrapper">
+        <div class="content-header row">
+        </div>
+        <div class="content-body">
+            <!-- users edit start -->
+            <section class="users-edit">
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-body">
+                            <ul class="nav nav-tabs mb-3" role="tablist">
+                                <li class="nav-item">
+                                    <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
+                                       aria-controls="account" role="tab" aria-selected="true">
+                                        <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block"> Approve Payout Request </span>
+                                    </a>
+                                </li>
 
+                            </ul>
+                            <div class="tab-content">
+                                <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
 
-            </div>
-            <!-- /.panel-heading -->
-            <div class="panel-body">
-                <div class="row">
-                    <div class="col-md-12 table-responsive">
-                        <table id="example23" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
-                            <thead>
-                                <tr>
-                                    <th>Sr No.</th>
-                                    <th>Login Id</th>
-                                    <th>Name</th>
-                                    <th>Requested Date</th>
+                                    <div class="row">
+                                        <div class="col-md-12 table-responsive">
+                                            <div class="dt-responsive table-responsive">
+                                                <table class="table mb-0" id="example23">
 
-                                    <th>Amount</th>
+                                                    <thead>
+                                                        <tr>
+                                                            <th>Sr No.</th>
+                                                            <th>Login Id</th>
+                                                            <th>Name</th>
+                                                            <th>Requested Date</th>
 
-                                    <th>Status</th>
-                                    <th></th>
+                                                            <th>Amount</th>
 
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @if (Model != null)
-                                {
-                                    if (Model.lstPayoutrequest != null)
-                                    {
-                                        int i = 1;
-                                        foreach (var Item in Model.lstPayoutrequest)
-                                        {
-                                            <tr class="text-left">
-                                                <td>@i</td>
-                                                <td>@Item.LoginId</td>
-                                                <td>@Item.DisplayName</td>
-                                                <td>@Item.AddedOn</td>
+                                                            <th>Status</th>
+                                                            <th></th>
 
-                                                <td>@Item.Amount</td>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                        @if (Model != null)
+                                                        {
+                                                            if (Model.lstPayoutrequest != null)
+                                                            {
+                                                                int i = 1;
+                                                                foreach (var Item in Model.lstPayoutrequest)
+                                                                {
+                                                                    <tr class="text-left">
+                                                                        <td>@i</td>
+                                                                        <td>@Item.LoginId</td>
+                                                                        <td>@Item.DisplayName</td>
+                                                                        <td>@Item.AddedOn</td>
 
-                                                <td>@Item.Status</td>
-                                                <td>
-                                                    @if (Item.Status == "Pending")
-                                                    {
-                                                        <a class="btn btn-success btn-sm" href="/Accounts/ApproveRequest/@Item.Pk_RequestId">Approve</a>
-                                                            <a class="btn btn-danger btn-sm" href="/Accounts/DeclineRequest/@Item.Pk_RequestId">Decline</a>
-                                                    }
+                                                                        <td>@Item.Amount</td>
 
-                                                </td>
+                                                                        <td>@Item.Status</td>
+                                                                        <td>
+                                                                            @if (Item.Status == "Pending")
+                                                                            {
+                                                                                <a class="btn btn-success btn-sm" href="/Accounts/ApproveRequest/@Item.Pk_RequestId">Approve</a>
+                                                                                <a class="btn btn-danger btn-sm" href="/Accounts/DeclineRequest/@Item.Pk_RequestId">Decline</a>
+                                                                            }
 
-                                            </tr>
-                                            i++;
-                                        }
+                                                                        </td>
 
-                                    }
-                                }
-                            </tbody>
-                        </table>
+                                                                    </tr>
+                                                                    i++;
+                                                                }
+
+                                                            }
+                                                        }
+                                                    </tbody>
+                                                </table>
+                                                </div>
+                                            </div>
+                                        </div>
+                                </div>
+                            </div>
+                        </div>
+                        </div>
                     </div>
-                </div>
-            </div>
+            </section>
         </div>
     </div>
-    <!-- content-wrapper ends -->
-    <!-- partial:../../partials/_footer.html -->
-    <!-- partial -->
 </div>
-<!-- main-panel ends -->
+
+
+
+
 
 
 
