--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/DownLine.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/DownLine.cshtml
@@ -5,126 +5,129 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<div class="row">
-    <div class="col-sm-12">
-        <ol class="breadcrumb">
-            <li>
-                <i class="clip-home-3"></i>
-                <a href="#">
-                    Team
-                </a>
-            </li>
-            <li class="active">
-                Downline List
-            </li>
-        </ol>
-    </div>
-</div>
-<br />
+
 
 @using (Html.BeginForm("Downline", "AdminReports", FormMethod.Post, new { @id = "form1" }))
 {
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    Downline List
+    <br />
+    <div class="app-content content">
+        <div class="content-overlay"></div>
+        <div class="header-navbar-shadow"></div>
+        <div class="content-wrapper">
+            <div class="content-header row">
+            </div>
+            <div class="content-body">
+                <!-- users edit start -->
+                <section class="users-edit">
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="card-body">
+                                <ul class="nav nav-tabs mb-3" role="tablist">
+                                    <li class="nav-item">
+                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
+                                           aria-controls="account" role="tab" aria-selected="true">
+                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Downline List </span>
+                                        </a>
+                                    </li>
+
+                                </ul>
+                                <div class="tab-content">
+                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
+
+                                        <div class="row">
+                                            <div class="col-md-12 table-responsive">
+                                                <div class="row">
+                                                    <div class="col-md-3">
+                                                        LoginId
+                                                        @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @placeholder = "Login Id", @required = "required" })
+                                                    </div>
+                                                    <div class="col-md-3">
+                                                        Name
+                                                        @Html.TextBoxFor(m => m.Name, new { @class = "form-control", @placeholder = "Login Id" })
+                                                    </div>
+                                                    <div class="col-md-3">
+                                                        From Date
+                                                        @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @placeholder = "From Date" })
+                                                    </div>
+                                                    <div class="col-md-3">
+                                                        To Date
+                                                        @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @placeholder = "To Date" })
+                                                    </div>
+                                                    <div class="col-md-3">
+                                                        Leg
+                                                        @Html.DropDownListFor(m => m.Leg, new SelectList(ViewBag.ddlleg, "Value", "Text"), new { @class = "form-control" })
+                                                    </div>
+                                                    <div class="col-md-3">
+                                                        Status
+                                                        @Html.DropDownListFor(m => m.Status, new SelectList(ViewBag.ddlStatus, "Value", "Text"), new { @class = "form-control" })
+                                                    </div>
+                                                    <div class="col-md-3">
+                                                        <br />
+                                                        <input type="submit" class="btn btn-info" value="Get Details" name="GetDetails" />
+                                                    </div>
+                                                </div>
 
 
-                </div>
-                <!-- /.panel-heading -->
-                <div class="panel-body">
-                    <div class="row">
-                        <div class="col-md-12 table-responsive">
-                            <div class="row">
-                                <div class="col-md-3">
-                                    LoginId
-                                    @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @placeholder = "Login Id", @required="required" })
-                                </div>
-                                <div class="col-md-3">
-                                    Name
-                                    @Html.TextBoxFor(m => m.Name, new { @class = "form-control", @placeholder = "Login Id" })
-                                </div>
-                                <div class="col-md-3">
-                                    From Date
-                                    @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @placeholder = "From Date" })
-                                </div>
-                                <div class="col-md-3">
-                                    To Date
-                                    @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @placeholder = "To Date" })
-                                </div>
-                                <div class="col-md-3">
-                                    Leg
-                                    @Html.DropDownListFor(m => m.Leg, new SelectList(ViewBag.ddlleg, "Value", "Text"), new { @class = "form-control" })
-                                </div>
-                                <div class="col-md-3">
-                                    Status
-                                    @Html.DropDownListFor(m => m.Status, new SelectList(ViewBag.ddlStatus, "Value", "Text"), new { @class = "form-control" })
-                                </div>
-                                <div class="col-md-3">
-                                    <br />
-                                    <input type="submit" class="btn btn-info" value="Get Details" name="GetDetails" />
+                                                <br />
+                                                <div class="dt-responsive table-responsive">
+                                                    <table class="table mb-0" id="example23">
+                                                        <thead>
+                                                            <tr>
+                                                                <th>Sr No.</th>
+
+                                                                <th>Login Id</th>
+                                                                @*<th>Password</th>*@
+                                                                <th>Name</th>
+                                                                <th>Leg</th>
+                                                                <th>Joining Date</th>
+                                                                <th>Package</th>
+                                                                <th>Activation Date</th>
+                                                                <th>Mobile No</th>
+                                                                <th>Status</th>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                            @if (Model != null)
+                                                            {
+                                                                if (Model.lstassociate != null)
+                                                                {
+                                                                    int i = 1;
+                                                                    foreach (var Item in Model.lstassociate)
+                                                                    {
+                                                                        <tr class="text-left">
+                                                                            <td>@i</td>
+
+                                                                            <td>@Item.LoginId</td>
+                                                                            @*<td>@Item.Password</td>*@
+                                                                            <td>@Item.Name</td>
+                                                                            <td>@Item.Leg</td>
+                                                                            <td>@Item.JoiningDate</td>
+                                                                            <td>@Item.Package</td>
+                                                                            <td>@Item.PermanentDate</td>
+                                                                            <td>@Item.Mobile</td>
+
+                                                                            <td>@Item.Status</td>
+
+                                                                        </tr>
+                                                                        i++;
+                                                                    }
+
+                                                                }
+                                                            }
+
+                                                        </tbody>
+                                                    </table>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                    </div>
                                 </div>
                             </div>
-
-                           
-                            <br />
-                            <table id="example23" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
-                                <thead>
-                                    <tr>
-                                        <th>Sr No.</th>
-
-                                        <th>Login Id</th>
-                                        @*<th>Password</th>*@
-                                        <th>Name</th>
-                                        <th>Leg</th>
-                                        <th>Joining Date</th>
-                                        <th>Package</th>
-                                        <th>Activation Date</th>
-                                        <th>Mobile No</th>
-                                        <th>Status</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @if (Model != null)
-                                    {
-                                        if (Model.lstassociate != null)
-                                        {
-                                            int i = 1;
-                                            foreach (var Item in Model.lstassociate)
-                                            {
-                                                <tr class="text-left">
-                                                    <td>@i</td>
-
-                                                    <td>@Item.LoginId</td>
-                                                    @*<td>@Item.Password</td>*@
-                                                    <td>@Item.Name</td>
-                                                    <td>@Item.Leg</td>
-                                                    <td>@Item.JoiningDate</td>
-                                                    <td>@Item.Package</td>
-                                                    <td>@Item.PermanentDate</td>
-                                                    <td>@Item.Mobile</td>
-
-                                                    <td>@Item.Status</td>
-
-                                                </tr>
-                                                i++;
-                                            }
-
-                                        }
-                                    }
-
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
+                </section>
             </div>
         </div>
-        <!-- content-wrapper ends -->
-        <!-- partial:../../partials/_footer.html -->
-        <!-- partial -->
     </div>
+
 
 }
 
