--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/TopupReport.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/TopupReport.cshtml
@@ -4,133 +4,135 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<div class="row">
-    <div class="col-sm-12">
-
-        <ol class="breadcrumb">
-            <li>
-                <i class="clip-home-3"></i>
-                <a href="#">
-                    Reports
-                </a>
-            </li>
-            <li class="active">
-                Topup Reports
-            </li>
-
-        </ol>
-
-
-    </div>
-</div>
-<br />
+ 
 @using (Html.BeginForm("TopupReport", "AdminReports", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
 {
+    <br />
+    <div class="app-content content">
+        <div class="content-overlay"></div>
+        <div class="header-navbar-shadow"></div>
+        <div class="content-wrapper">
+            <div class="content-header row">
+            </div>
+            <div class="content-body">
+                <!-- users edit start -->
+                <section class="users-edit">
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="card-body">
+                                <ul class="nav nav-tabs mb-3" role="tablist">
+                                    <li class="nav-item">
+                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
+                                           aria-controls="account" role="tab" aria-selected="true">
+                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">  Topup Reports </span>
+                                        </a>
+                                    </li>
 
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    Topup Reports
+                                </ul>
+                                <div class="tab-content">
+                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
+
+                                        <div class="row">
+                                            <div class="col-md-12 table-responsive">
+                                                <div class="row">
+                                                    <div class="col-lg-3">
+                                                        Login Id
+                                                        @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control" })
+                                                    </div>
+                                                    <div class="col-lg-3">
+                                                        Name
+                                                        @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+                                                    </div>
+                                                    <div class="col-lg-3">
+                                                        Package
+                                                        @Html.DropDownListFor(m => m.Package, new SelectList(ViewBag.ddlProduct, "Value", "Text"), new { @class = "form-control" })
+                                                    </div>
+                                                    <div class="col-md-3">
+                                                        Status
+                                                        @Html.DropDownListFor(m => m.Status, new SelectList(ViewBag.ddlstatus, "Value", "Text"), new { @class = "form-control" })
+                                                    </div>
+                                                    <div class="col-lg-3">
+                                                        From Date
+                                                        @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @readonly = "readonly" })
+                                                    </div>
+                                                    <div class="col-lg-3">
+                                                        To Date
+                                                        @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @readonly = "readonly" })
+                                                    </div>
+                                                    <div class="col-lg-3">
+                                                        <br />
+                                                        <input class="btn btn-success" type="submit" value="Search" name="Search" id="btnSearch" />
+                                                    </div>
+                                                </div>
 
 
-                </div>
-                <!-- /.panel-heading -->
-                <div class="panel-body">
-                    <div class="row">
-                        <div class="col-md-12 table-responsive">
-                            <div class="row">
-                                <div class="col-lg-3">
-                                    Login Id
-                                    @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control" })
-                                </div>
-                                <div class="col-lg-3">
-                                    Name
-                                    @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
-                                </div>
-                                <div class="col-lg-3">
-                                    Package
-                                    @Html.DropDownListFor(m => m.Package, new SelectList(ViewBag.ddlProduct, "Value", "Text"), new { @class = "form-control" })
-                                </div>
-                                <div class="col-md-3">
-                                    Status
-                                    @Html.DropDownListFor(m => m.Status, new SelectList(ViewBag.ddlstatus, "Value", "Text"), new { @class = "form-control" })
-                                </div>
-                                <div class="col-lg-3">
-                                    From Date  
-                                    @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @readonly = "readonly" })
-                                </div>
-                                <div class="col-lg-3">
-                                    To Date
-                                    @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @readonly = "readonly" })
-                                </div>
-                                <div class="col-lg-3">
-                                    <br />
-                                    <input class="btn btn-success" type="submit" value="Search" name="Search" id="btnSearch" />
+
+                                                <div class="dt-responsive table-responsive">
+                                                    <table class="table mb-0" id="example23">
+
+                                                        <thead>
+                                                            <tr>
+                                                                <th>Sr No.</th>
+                                                                <th>Login Id</th>
+                                                                <th>Name</th>
+                                                                <th>PlotNo</th>
+                                                                <th>Description</th>
+                                                                <th>Upgradation Date</th>
+                                                                <th>Package</th>
+                                                                <th>Price</th>
+                                                                <th>Calculation Status</th>
+                                                                <th>Print</th>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                            @if (Model != null)
+                                                            {
+                                                                if (Model.lsttopupreport != null)
+                                                                {
+                                                                    int i = 1;
+                                                                    foreach (var Item in Model.lsttopupreport)
+                                                                    {
+                                                                        <tr class="text-left">
+                                                                            <td>@i</td>
+                                                                            <td>@Item.LoginId</td>
+                                                                            <td>@Item.DisplayName</td>
+                                                                            <td>@Item.PlotNumber</td>
+                                                                            <td>@Item.Description</td>
+                                                                            <td>@Item.UpgradtionDate</td>
+
+                                                                            <td>@Item.Package</td>
+
+                                                                            <td>@Item.Amount</td>
+
+                                                                            <td>@Item.Status</td>
+
+                                                                            <td>
+                                                                                @*<a href="/AdminReports/PrintReciept/@Item.LoginId">Print</a>*@
+                                                                                <a href="/AdminReports/PrintTopUp?ToLoginID=@Item.ToLoginID" class="btn btn-sm btn-primary" target="_blank">Print </a>
+                                                                                @*  <button onclick="changeprintdate('@Item.PrintingDate','@Item.LoginId')">Print</button>*@
+                                                                            </td>
+                                                                        </tr>
+                                                                        i++;
+                                                                    }
+
+                                                                }
+                                                            }
+                                                        </tbody>
+                                                    </table>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                    </div>
                                 </div>
                             </div>
-
-                            <table id="example23" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
-                                <thead>
-                                    <tr>
-                                        <th>Sr No.</th>
-                                        <th>Login Id</th>
-                                        <th>Name</th>
-                                        <th>PlotNo</th>
-                                        <th>Description</th>
-                                        <th>Upgradation Date</th>
-                                        <th>Package</th>
-                                        <th>Price</th>
-                                        <th>Calculation Status</th>
-                                        <th>Print</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @if (Model != null)
-                                    {
-                                        if (Model.lsttopupreport != null)
-                                        {
-                                            int i = 1;
-                                            foreach (var Item in Model.lsttopupreport)
-                                            {
-                                                <tr class="text-left">
-                                                    <td>@i</td>
-                                                    <td>@Item.LoginId</td>
-                                                    <td>@Item.DisplayName</td>
-                                                    <td>@Item.PlotNumber</td>
-                                                    <td>@Item.Description</td>
-                                                    <td>@Item.UpgradtionDate</td>
-
-                                                    <td>@Item.Package</td>
-
-                                                    <td>@Item.Amount</td>
-
-                                                    <td>@Item.Status</td>
-
-                                                    <td>
-                                                        @*<a href="/AdminReports/PrintReciept/@Item.LoginId">Print</a>*@
-                                                        <a href="/AdminReports/PrintTopUp?ToLoginID=@Item.ToLoginID" class="btn btn-sm btn-primary" target="_blank">Print </a>
-                                                      @*  <button onclick="changeprintdate('@Item.PrintingDate','@Item.LoginId')">Print</button>*@
-                                                    </td>
-                                                </tr>
-                                                i++;
-                                            }
-
-                                        }
-                                    }
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
+                </section>
             </div>
         </div>
-        <!-- content-wrapper ends -->
-        <!-- partial:../../partials/_footer.html -->
-        <!-- partial -->
     </div>
-    <!-- main-panel ends -->
-   
+
+
+                        <!-- main-panel ends -->
+
 
     <div id="myModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
