--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/TransactionLog.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/TransactionLog.cshtml
@@ -5,109 +5,111 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<div class="row">
-    <div class="col-sm-12">
 
-        <ol class="breadcrumb">
-            <li>
-                <i class="clip-home-3"></i>
-                <a href="#">
-                    Reports
-                </a>
-            </li>
-            <li class="active">
-                Transaction Log
-            </li>
-
-        </ol>
-
-
-    </div>
-</div>
-<br />
 @using (Html.BeginForm("TransactionLog", "AdminReports", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
 {
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    Transaction Log
+    <br />
+    <div class="app-content content">
+        <div class="content-overlay"></div>
+        <div class="header-navbar-shadow"></div>
+        <div class="content-wrapper">
+            <div class="content-header row">
+            </div>
+            <div class="content-body">
+                <!-- users edit start -->
+                <section class="users-edit">
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="card-body">
+                                <ul class="nav nav-tabs mb-3" role="tablist">
+                                    <li class="nav-item">
+                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
+                                           aria-controls="account" role="tab" aria-selected="true">
+                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">  Transaction Log </span>
+                                        </a>
+                                    </li>
+
+                                </ul>
+                                <div class="tab-content">
+                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
+
+                                        <div class="row">
+                                            <div class="col-md-12 table-responsive">
+                                                <div class="row">
+                                                    <div class="col-lg-3">
+                                                        Action
+                                                        @Html.TextBoxFor(m => m.Action, new { @class = "form-control" })
+                                                    </div>
 
 
-                </div>
-                <!-- /.panel-heading -->
-                <div class="panel-body">
-                    <div class="row">
-                        <div class="col-md-12 table-responsive">
-                            <div class="row">
-                                <div class="col-lg-3">
-                                    Action
-                                    @Html.TextBoxFor(m => m.Action, new { @class = "form-control" })
-                                </div>
+                                                    <div class="col-lg-3">
+                                                        <div class="form-group">
+                                                            <label>From Date  </label>
+                                                            @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @readonly = "readonly" })
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-lg-3">
+                                                        <div class="form-group">
+                                                            <label>To Date  </label>
+                                                            @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @readonly = "readonly" })
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-lg-3">
+                                                        <br />
+                                                        <input class="btn btn-success" type="submit" value="Search" name="Search" id="btnSearch" />
+                                                    </div>
+                                                </div>
 
 
-                                <div class="col-lg-3">
-                                    <div class="form-group">
-                                        <label>From Date  </label>
-                                        @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @readonly = "readonly" })
+                                                <div class="dt-responsive table-responsive">
+                                                    <table class="table mb-0" id="example23">
+
+                                                        <thead>
+                                                            <tr>
+                                                                <th>Sr No.</th>
+                                                                <th>Transaction Date</th>
+                                                                <th>Action</th>
+                                                                <th>Remark</th>
+
+
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                            @if (Model != null)
+                                                            {
+                                                                if (Model.lsttransactionlog != null)
+                                                                {
+                                                                    int i = 1;
+                                                                    foreach (var Item in Model.lsttransactionlog)
+                                                                    {
+                                                                        <tr class="text-left">
+                                                                            <td>@i</td>
+                                                                            <td>@Item.AddedOn</td>
+                                                                            <td>@Item.Action</td>
+                                                                            <td>@Item.Remarks</td>
+
+
+
+                                                                        </tr>
+                                                                        i++;
+                                                                    }
+
+                                                                }
+                                                            }
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="col-lg-3">
-                                    <div class="form-group">
-                                        <label>To Date  </label>
-                                        @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @readonly = "readonly" })
-                                    </div>
-                                </div>
-                                <div class="col-lg-3">
-                                    <br />
-                                    <input class="btn btn-success" type="submit" value="Search" name="Search" id="btnSearch" />
                                 </div>
                             </div>
-                            <table id="example23" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
-                                <thead>
-                                    <tr>
-                                        <th>Sr No.</th>
-                                        <th>Transaction Date</th>
-                                        <th>Action</th>
-                                        <th>Remark</th>
-
-
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @if (Model != null)
-                                    {
-                                        if (Model.lsttransactionlog != null)
-                                        {
-                                            int i = 1;
-                                            foreach (var Item in Model.lsttransactionlog)
-                                            {
-                                                <tr class="text-left">
-                                                    <td>@i</td>
-                                                    <td>@Item.AddedOn</td>
-                                                    <td>@Item.Action</td>
-                                                    <td>@Item.Remarks</td>
-
-
-
-                                                </tr>
-                                                i++;
-                                            }
-
-                                        }
-                                    }
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
+                </section>
             </div>
         </div>
-        <!-- content-wrapper ends -->
-        <!-- partial:../../partials/_footer.html -->
-        <!-- partial -->
     </div>
-    <!-- main-panel ends -->
+
+
 
 
 
